# lora-chat

./: .gitignore  LICENSE  README.md  TODO.md  meson.build
driver/: Makefile
driver/include/lora-chat/: device_info.h  ioctls.h
driver/src/: dumb_loopback.c  lc_spi.c
libbcp/: meson.build
libbcp/include/: bcp.hpp  meson.build
libbcp/src/: bytepack.hpp  clock.hpp  lora_interface.cpp  lora_interface.hpp  meson.build  packet.cpp  packet.hpp  packet_unittest.cpp  protocol_agent.cpp  protocol_agent.hpp  protocol_agent_unittest.cpp  radio_interface.cpp  radio_interface.hpp  sequence_number.hpp  session.cpp  session.hpp  session_unittest.cpp  test_utils.hpp  time.hpp  wire_packet.hpp
libsx1276/: meson.build
libsx1276/include/: sx1276.hpp
libsx1276/src/: meson.build  radio_math.cpp  radio_math.hpp  radio_operations.cpp  radio_operations.hpp  spi_wrappers.hpp  sx1276_lora_registers.hpp  types.hpp
src/driver/: Makefile  dumb_loopback.c
tools/: meson.build
tools/bcp-agent/: main.cpp  meson.build
tools/lora-chat/: config.cpp  config.hpp  lora_interface.cpp  lora_interface.hpp  main.cpp  meson.build  user_interface.cpp  user_interface.hpp
tools/spi-repl/: main.cpp  meson.build
